* Post 2.0.0
* Make use of clock shifting function in difxio
* Add in Difx-based pulse cal data
* Add in Difx-based tsys
* Fix TSys values in the zoom band cases
* Fix Pulse cal values in the zoom band cases
* DiFX extracted pulse cals: ensure proper antennaIds for merged job cases
* valgrind used to track down some memory leaks
* print fits keywords for each fits file when -v is supplied

Version 3.0
* Includes the following merged changes from DiFX-1.5:
  - Copy jobmatrix file
  - rename "makefilts.tmp" to "makefits.tmp"
  - Apply flags properly, even in cases with crazy subarraying
  - Write file that summarizes jobs that went into FITS
  - Pass full command line option structure to UV writing
  - Normalize calling to all table writing functions
  - Properly populate GATEMODL table
  - Write .jobmatrix file
  - Write new WEIGHTYP keyword
  - Sniffer: keep one more amplitude digit
  - Sniffer: apd and apc files: keep 2 more time digits
* Adds support for multiple phase centres, zoom bands
* Also bugfixes for freeing memory
* Requires difxio 3.0
* Fixes by Olaf Wuchnitz: print format for writing strings to FITS and argument order in memcpy
* Some cppcheck results from Martin Ettl
* Don't fail to set proper .jobmatrix filename when not running sniffer
* Properly index config table in fitsGM.c
* makefits: pass --override-version on to difx2fits
* makefits: list all phase centres and pulsar bins, and use this info
* by default produce sniffer output only for bin=0 phasecentre=0
* conform to new variable names in difxio, and more importantly, don't go out of the way to get frequency labelling wrong!
* migrate to using EQUINOX in output FITS files
* Version for DiFX-2.0.0

Version 2.5
* Require difxio 2.10
* Post DiFX-1.5
* Sniffer: look for spectral lines

Version 2.4
* Post NRAO-DiFX 1.1 development
* Require difxio 2.5
* Fix numbering of FITS Source IDs
* Better handle transitional scans
* don't use bcopy -- use memcpy instead.